--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
   <title>Josh Quotes</title>
 </head>
 <body>
+  <a href="https://github.com/xanth-/JoshQuotes"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
   <h1 class="headerTitle">Matthew Shipman</h1>
-  <h2 class="headerSub">"Sickest cunt!" - <a class="referenceLink" href="https://www.facebook.com/josh.newman4390">Joshua Newman</a></h2>
+  <h2 class="headerSub">"Sickest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 
   <h1 class="headerTitle">Robert Chatfield</h1>
-  <h2 class="headerSub">"Madest cunt!" - <a class="referenceLink" href="https://www.facebook.com/josh.newman4390">Joshua Newman</a></h2>
+  <h2 class="headerSub">"Madest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 
   <h1 class="headerTitle">Rhys Williams</h1>
-  <h2 class="headerSub">"Beardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/josh.newman4390">Joshua Newman</a></h2>
+  <h2 class="headerSub">"Beardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
+
+  <h1 class="headerTitle">Marc Wannenmacher</h1>
+  <h2 class="headerSub">"Pepsi MAX cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 
   <h1 class="headerTitle">Joshua Newman</h1>
-  <h2 class="headerSub">"hardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/josh.newman4390">Joshua Newman</a></h2>
+  <h2 class="headerSub">"hardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 </body>
 </html>
