removed old not_found.html file

--- a/index.html
+++ b/index.html
@@ -21,6 +21,6 @@
   <h2 class="headerSub">"Pepsi MAX cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 
   <h1 class="headerTitle">Joshua Newman</h1>
-  <h2 class="headerSub">"hardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
+  <h2 class="headerSub">"Hardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 </body>
 </html>
