new fork me banner

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Josh Quotes</title>
 </head>
 <body>
-  <a href="https://github.com/xanth-/JoshQuotes"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_orange_ff7600.png" alt="Fork me on GitHub"></a>
+  <a href="https://github.com/xanth-/JoshQuotes"><img style="position: absolute; top: 0; left: 0; border: 0;" src="forkme_light_background.png" alt="Fork Josh on GitHub"></a>
+
   <h1 class="headerTitle">Matthew Shipman</h1>
   <h2 class="headerSub">"Sickest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 
