--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" type="text/css" href="main.css">  
+  <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="icon" type="image/png" href="ico.png" >
   <title>Josh Quotes</title>
 </head>
@@ -23,5 +23,8 @@
 
   <h1 class="headerTitle">Joshua Newman</h1>
   <h2 class="headerSub">"Hardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
+
+  <h1 class="headerTitle">Web Programming Lunch Break</h1>
+  <h2 class="headerSub">"Make the sickest shit!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 </body>
 </html>
