removed lunch break

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <h1 class="headerTitle">Joshua Newman</h1>
   <h2 class="headerSub">"Hardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 
-  <h1 class="headerTitle">Web Programming Lunch Break</h1>
+  <h1 class="headerTitle">Web Programming</h1>
   <h2 class="headerSub">"Make the sickest shit!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 </body>
 </html>
