added Rodney Quote

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 
   <h1 class="headerTitle">Joshua Newman</h1>
   <h2 class="headerSub">"hardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
+
+  <h1 class="headerTitle">The Internet</h1>
+  <h2 class="headerSub">"It works" - <a class="referenceLink" href="https://www.facebook.com/">Rodney Topor</a></h2>
 </body>
 </html>
