added legacy browsers

--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
   <h2 class="headerSub">"hardest cunt!" - <a class="referenceLink" href="https://www.facebook.com/">Joshua Newman</a></h2>
 
   <h1 class="headerTitle">The Internet</h1>
-  <h2 class="headerSub">"It works" - <a class="referenceLink" href="https://www.facebook.com/">Rodney Topor</a></h2>
+  <h2 class="headerSub">"It works." - <a class="referenceLink" href="https://www.facebook.com/">Rodney Topor</a></h2>
+
+  <h1 class="headerTitle">Microsoft</h1>
+  <h2 class="headerSub">"Bad for the economy." - <a class="referenceLink" href="https://www.facebook.com/">Rodney Topor</a></h2>
+
+  <h1 class="headerTitle">Legacy Browsers</h1>
+  <h2 class="headerSub">"Life is to short." - <a class="referenceLink" href="https://www.facebook.com/">Robert Chatfield</a></h2>
 </body>
 </html>
